--- a/stylesheet.css
+++ b/stylesheet.css
@@ -104,7 +104,7 @@
 }
 
 .howdoi-answer-view {
-    background-color: rgba(49, 49, 49, 0.8);
+    background-color: #292929;
     border: 1px solid rgba(154, 154, 142, 0.5);
 }
 
