--- a/stylesheet.css
+++ b/stylesheet.css
@@ -241,21 +241,25 @@
     color: rgba(0, 106, 255, 1);
 }
 
-.howdoi-copy-code-button {
+.howdoi-copy-code-button, .howdoi-view-mode-button {
     padding-top: 20px;
     color: rgba(255, 255, 255, 0.3);
 }
 
-.howdoi-copy-code-button:hover {
+.howdoi-copy-code-button:hover, .howdoi-view-mode-button:hover {
     color: rgba(0, 106, 255, 0.8);
 }
 
-.howdoi-copy-code-button:active {
+.howdoi-copy-code-button:active, .howdoi-view-mode-button:active {
     color: rgba(0, 106, 255, 1);
 }
 
-.howdoi-copy-code-button:disabled {
+.howdoi-copy-code-button:disabled, .howdoi-view-mode-button:disabled {
     color: rgba(255, 255, 255, 0.1);
+}
+
+.howdoi-view-mode-button:checked {
+    color: rgba(0, 106, 255, 1);
 }
 
 .howdoi-answer-link-popup {
