--- a/stylesheet.css
+++ b/stylesheet.css
@@ -262,7 +262,7 @@
     color: rgba(0, 106, 255, 1);
 }
 
-.howdoi-answer-link-popup {
+.howdoi-answer-tooltip {
     padding: 5px;
     background-color: rgba(0, 0, 0, 0.7);
     color: white;
