--- a/stylesheet.css
+++ b/stylesheet.css
@@ -281,3 +281,11 @@
     color: white;
     font-size: 15px;
 }
+
+.howdoi-animated-label {
+    background-color: rgba(52, 101, 164, 0.7);
+    font-size: 14px;
+    color: white;
+    border: 1px solid #0D4CA3;
+    padding: 5px;
+}
