--- a/stylesheet.css
+++ b/stylesheet.css
@@ -226,6 +226,11 @@
     color: rgba(255, 255, 255, 0.5);
 }
 
+.howdoi-cached-label {
+    font-size: 15px;
+    color: rgba(255, 98, 0, 1);
+}
+
 .howdoi-copy-block-button {
     color: rgba(0, 106, 255, 0.5);
 }
