--- a/stylesheet.css
+++ b/stylesheet.css
@@ -36,6 +36,8 @@
 .howdoi-search-entry {
     font-size: 30px;
     background-color: rgba(49, 49, 49, 0.8);
+    caret-color: #0D4CA3;
+    padding: 5px;
 }
 
 .howdoi-search-entry:hover .howdoi-search-entry-icon,
